fix(challenges): Word wrap fix for Chrome (#16736)

--- a/common/app/routes/Challenges/views/step/step.less
+++ b/common/app/routes/Challenges/views/step/step.less
@@ -2,6 +2,7 @@
 @ns: step;
 
 .@{ns}-description {
+  word-wrap: break-word;
   font-size: 1.5em;
 }
 .@{ns}-counter {
